--- a/UserInterface/appsettings.json
+++ b/UserInterface/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "EmailSettings": {
+    "Host": "smtp.gmail.com",
+    "Password": "dgwtwktmrgdpumta",
+    "Email": "haylejj3@gmail.com"
+  },
   "ConnectionStrings": {
     "SqlConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EnglishPratice;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
